<resources>
    <string name="app_name">SchoolProject</string>
    <string name="nointernet">no internet</string>
    <string name="vpn">vpn</string>
    <string name="todo">TODO</string>
    <string name="lets_sign_you_in">Lets Sign you in</string>
    <string name="login_msg">Log in to continue</string>
    <string name="request_otp">Request OTP</string>
    <string name="mobile_no">mobile number</string>
    <string name="verify_to_continue">Verify the otp to continue</string>
    <string name="hi_students">Hi Students</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_to_continue">Enter otp to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="fees_due">Fees Due</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="month">Month</string>
    <string name="payment_date">Payment Date</string>
    <string name="pay_online">Pay Online</string>
    <string name="period">Period</string>
    <string name="date">Date</string>
    <string name="pay_now">Pay Now</string>
    <string name="assign_date">Assign Date</string>
    <string name="timetable">Timetable</string>
    <string name="mon">MON</string>
    <string name="attendence">Attendence</string>
    <string name="holiday">Holiday</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="datasheet">DataSheet</string>
    <string name="ask_doubt">Ask Doubt</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="title">Title</string>
    <string name="doubt_description">Doubt Description</string>
    <string name="leave_application">Leave Application</string>
    <string name="class_teacher">Class Teacher</string>
    <string name="application_title">Application Title</string>
    <string name="send_request">Send Request</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="change_password">Change Password</string>
    <string name="get_support">Get Support</string>
    <string name="for_any_support_request_regards_your_orders_or_deliveries_please_feel_free_to_speak_with_us_at_below">For any support request regards your orders or deliveries please feel free to speak with us at below.</string>
</resources>