<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.TimeTableFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_gradient"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/arrow" />

                <com.example.schoolproject.helper.CustomTextViewMedium
                    style="@style/white_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/timetable" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/white_tltr_20"
            android:layout_weight="0.85">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/edittext_color_border_8"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_mon"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    style="@style/white_9"
                    android:paddingVertical="@dimen/_5sdp"
                    android:background="@drawable/rounded_blue_layout"/>

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_tue"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    style="@style/black_9"
                    android:paddingVertical="@dimen/_5sdp"/>

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_wed"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    style="@style/black_9"
                    android:paddingVertical="@dimen/_5sdp"/>

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_thu"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/thu"
                    android:textAlignment="center"
                    style="@style/black_9"
                    android:paddingVertical="@dimen/_5sdp"/>

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_fri"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    style="@style/black_9"
                    android:paddingVertical="@dimen/_5sdp"/>

                <com.example.schoolproject.helper.CustomTextViewMedium
                    android:id="@+id/tv_sat"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    style="@style/black_9"
                    android:paddingVertical="@dimen/_5sdp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:itemCount="5"
                tools:listitem=""/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>