<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.PayOnlineFragment">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_gradient"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/iv_back"
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/arrow" />

                        <com.example.schoolproject.helper.CustomTextViewMedium
                            style="@style/white_14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:text="@string/pay_online" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.85"
                    android:background="@drawable/white_tltr_20"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp">

                    <com.example.schoolproject.helper.CustomTextViewMedium
                        style="@style/gray_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center_vertical">

                        <com.example.schoolproject.helper.CustomTextViewSemiBold
                            android:id="@+id/tv_payonline_Date"
                            style="@style/black_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:text="01 Feb 2020" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/calendar"
                            android:tint="@color/gray_1" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:background="@color/gray_2" />

                    <com.example.schoolproject.helper.CustomTextViewMedium
                        style="@style/gray_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/period" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center_vertical">

                        <com.example.schoolproject.helper.CustomTextViewSemiBold
                            android:id="@+id/tv_payonline_Period"
                            style="@style/black_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:text="28 Feb 2020" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/calendar"
                            android:tint="@color/gray_1" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:background="@color/gray_2" />

                    <com.example.schoolproject.helper.CustomTextViewMedium
                        style="@style/gray_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total Fees" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center_vertical">

                        <com.example.schoolproject.helper.CustomTextViewSemiBold
                            android:id="@+id/tv_payonline_TotalFees"
                            style="@style/black_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:text="\u20b9999" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:background="@color/gray_2" />

                </LinearLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_payNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_gradient"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp">

                    <com.example.schoolproject.helper.CustomTextViewMedium
                        style="@style/white_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/pay_now" />


                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/right_arrow"
                        android:tint="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


</RelativeLayout>